# ImageCompare

./: CMakeLists.txt  main.cpp  main.qml
src/: ScreenCaptureController.cpp  ScreenCaptureController.h  ScreenshotDetails.h  ScreenshotsModel.cpp  ScreenshotsModel.h  import_qml_plugins.h
